tests/fixtures/invalid/unknown_struct_field.gcl
// error: unknown field access on struct
pub type Transfer {
    Transfer(dv1: Velocity, dv2: Velocity),
}

param v: Velocity = 100.0 m/s;
node transfer: Transfer = Transfer(dv1: @v, dv2: @v);
node bad: Velocity = @transfer.nonexistent;
